# custom-qase-client

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: client.py  request.py
src/api/attachments/: api.py
src/api/cases/: api.py
src/api/environments/: api.py
src/api/projects/: api.py
tests/: conftest.py
tests/attachments/: test_attachments.py
tests/cases/: test_cases.py
tests/custom_fields/: test_custom_fields.py
tests/defects/: test_defects.py
tests/environments/: test_enviroments.py
tests/milestone/: test_milestone.py
tests/planes/: test_plans.py
tests/plans/: test_plans.py
tests/projects/: test_access.py  test_crud_projects.py
tests/results/: test_results.py
tests/runs/: test_runs.py
tests/shared_steps/: test_shared_steps.py
tests/suites/: test_suites.py
